point to new resume page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       Hello World. <br />
       My name is <b>Hannah Fouasnon</b>. I write code. <br />
       Until we meet again, check out some links: <br />
-      [<a href="/pages/resume.html">resume</a>]
+      [<a href="/resume">resume</a>]
       [<a href="http://github.com/fouasnon">github</a>]
       [<a href="http://twitter.com/#!/hanelifou">twitter</a>] <br />
       [<a href="/blog">blog</a>] <br />
