update resume location

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,12 +1,5 @@
 <html>
   <head>
-    <script type="text/javascript" src="/src/pdf.js"></script>
-    <script type="text/javascript" src="/src/resume.js"></script>
-    <link href='../css/resume.css'
-          rel='stylesheet' type='text/css'>
-    
-    <link href='http://fonts.googleapis.com/css?family=Pontano+Sans'
-          rel='stylesheet' type='text/css'>
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -20,11 +13,9 @@
       })();
 
     </script>
-
   </head>
   <title>resume</title>
   <body>
-    <center>[<a href="/pdf/resume.pdf">.pdf</a>]</center>
-    <canvas id="the-canvas"/>
+    This page has moved. New location is <a href="http://hanelifou.com/resume">here</a>.
   </body>
 </html>
